# UniMRCP-with-freeswitch

./: README.md
unimrcp-1.5.0/: CMakeLists.txt  Makefile  config.status  libtool
unimrcp-1.5.0/autom4te.cache/: output.0  requests  traces.0
unimrcp-1.5.0/conf/: Makefile
unimrcp-1.5.0/data/: Makefile
unimrcp-1.5.0/libs/: Makefile
unimrcp-1.5.0/libs/apr-toolkit/: Makefile
unimrcp-1.5.0/libs/apr-toolkit/src/.deps/: apt_log.Plo  apt_task.Plo
unimrcp-1.5.0/libs/mpf/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/libs/mpf/src/: mpf_activity_detector.c
unimrcp-1.5.0/libs/mpf/src/.deps/: mpf_activity_detector.Plo
unimrcp-1.5.0/libs/mpf/webrtc/common_audio/signal_processing/: spl_init.c
unimrcp-1.5.0/libs/mpf/webrtc/common_audio/signal_processing/.deps/: complex_bit_reverse.Plo  complex_fft.Plo  cross_correlation.Plo  division_operations.Plo  downsample_fast.Plo  energy.Plo  get_scaling_square.Plo  min_max_operations.Plo  real_fft.Plo  resample_48khz.Plo  resample_by_2_internal.Plo  resample_fractional.Plo  spl_init.Plo  vector_scaling_operations.Plo
unimrcp-1.5.0/libs/mpf/webrtc/common_audio/vad/.deps/: vad_core.Plo  vad_filterbank.Plo  vad_gmm.Plo  vad_sp.Plo  webrtc_vad.Plo
unimrcp-1.5.0/libs/mrcp/: CMakeLists.txt  Makefile
unimrcp-1.5.0/libs/mrcp-client/: Makefile
unimrcp-1.5.0/libs/mrcp-engine/: Makefile
unimrcp-1.5.0/libs/mrcp-server/: Makefile
unimrcp-1.5.0/libs/mrcp-signaling/: Makefile
unimrcp-1.5.0/libs/mrcpv2-transport/: Makefile
unimrcp-1.5.0/libs/uni-rtsp/: Makefile
unimrcp-1.5.0/modules/: Makefile
unimrcp-1.5.0/modules/mrcp-sofiasip/: Makefile
unimrcp-1.5.0/modules/mrcp-sofiasip/src/.deps/: mrcp_sofiasip_client_agent.Plo  mrcp_sofiasip_server_agent.Plo  mrcp_sofiasip_task.Plo
unimrcp-1.5.0/modules/mrcp-unirtsp/: Makefile
unimrcp-1.5.0/plugins/: Makefile
unimrcp-1.5.0/plugins/demo-recog/: Makefile
unimrcp-1.5.0/plugins/demo-synth/: Makefile
unimrcp-1.5.0/plugins/demo-verifier/: Makefile
unimrcp-1.5.0/plugins/mrcp-recorder/: Makefile
unimrcp-1.5.0/plugins/xfyun-recog/: Makefile  Makefile.am
unimrcp-1.5.0/plugins/xfyun-recog/src/: xfyun_recog_engine.c
unimrcp-1.5.0/plugins/xfyun-synth/: Makefile
unimrcp-1.5.0/tests/: Makefile
unimrcp-1.5.0/tests/apttest/: Makefile
unimrcp-1.5.0/tests/mpftest/: Makefile
unimrcp-1.5.0/tests/mrcptest/: Makefile
unimrcp-1.5.0/tests/rtsptest/: Makefile
unimrcp-1.5.0/tests/strtablegen/: Makefile
unimrcp-deps-1.5.0/libs/apr/: Makefile  apr-1-config  apr-config.out  apr.exp  config.status  exports.c  libtool
unimrcp-deps-1.5.0/libs/apr-util/: Makefile  apr-util.pc  apu-1-config  apu-config.out  config.nice  config.status  exports.c
unimrcp-deps-1.5.0/libs/apr-util/.libs/: libaprutil-1.lai
unimrcp-deps-1.5.0/libs/apr-util/dbd/.libs/: apr_dbd_odbc.lai  apr_dbd_sqlite3.lai
unimrcp-deps-1.5.0/libs/apr-util/include/: apu.h
unimrcp-deps-1.5.0/libs/apr-util/include/private/: apu_config.h
unimrcp-deps-1.5.0/libs/apr-util/test/: Makefile
unimrcp-deps-1.5.0/libs/apr/.libs/: libapr-1.lai
unimrcp-deps-1.5.0/libs/apr/include/: apr.h
unimrcp-deps-1.5.0/libs/apr/include/arch/unix/: apr_private.h
unimrcp-deps-1.5.0/libs/apr/test/: Makefile
unimrcp-deps-1.5.0/libs/apr/test/internal/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/: Makefile  config.h  config.status  libtool
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua-glib/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua-glib/su-glib/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/bnf/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/bnf/.deps/: bnf.Plo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/docs/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/features/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/features/.deps/: features.Plo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/http/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/http/.deps/: http_tag.Plo  http_tag_class.Plo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/ipt/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/iptsec/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/iptsec/.deps/: auth_client.Plo  auth_module.Plo  auth_module_http.Plo  auth_module_sip.Plo  auth_plugin.Plo  auth_plugin_delayed.Plo  auth_tag.Plo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/msg/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/msg/.deps/: msg.Plo  msg_header_copy.Plo  msg_mclass.Plo  msg_mime.Plo  msg_parser.Plo  msg_parser_util.Plo  msg_tag.Plo  test_class.Po
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/nea/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/nea/.deps/: nea.Plo  nea_server.Plo  nea_tag.Plo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/nta/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/nth/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/nua/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/sdp/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/sip/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/soa/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/sresolv/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/stun/: Makefile  stunc
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/su/: Makefile  addrinfo  localinfo
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/tport/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/libsofia-sip-ua/url/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/open_c/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/s2check/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/tests/: Makefile
unimrcp-deps-1.5.0/libs/sofia-sip/utils/: Makefile  sip-date  sip-dig  sip-options
unimrcp-deps-1.5.0/libs/sofia-sip/utils/.deps/: sip-dig.Po  sip-options.Po
unimrcp-deps-1.5.0/libs/sofia-sip/utils/.libs/: sip-date  sip-dig  sip-options
unimrcp-deps-1.5.0/libs/sofia-sip/win32/: Makefile
(+70 files in other folders)
